# wayback-machine-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  go.mod  wayback-machine.go
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  features.lua  wayback-machine.rockspec  wayback-machine_sdk.lua  wayback-machine_types.lua
php/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  composer.json  config.php  features.php  (+1 more)
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  pyproject.toml  waybackmachine_sdk.py  waybackmachine_types.py
py/core/: context.py  response.py  result.py  utility_type.py
py/entity/: availability_entity.py
py/feature/: debug_feature.py  log_feature.py  metrics_feature.py  paging_feature.py  proxy_feature.py  ratelimit_feature.py  rbac_feature.py  test_feature.py
py/test/: feature_harness.py  runner.py  test_availability_direct.py  test_availability_entity.py  test_exists.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py
py/utility/: feature_hook.py  make_error.py  make_fetch_def.py  make_point.py  make_request.py  make_result.py  make_spec.py  make_url.py  prepare_body.py  prepare_headers.py  prepare_params.py  prepare_query.py  register.py  result_headers.py  transform_request.py  transform_response.py
(+414 files in other folders)
